build_errors_vite.txt

> planet@0.0.0 build
> tsc -b && vite build

[36mvite v8.0.0 [32mbuilding client environment for production...[36m[39m
[2Ktransforming...✓ 2712 modules transformed.
[31m✗[39m Build failed in 484ms
[31merror during build:
[31mBuild failed with 1 error:

[plugin vite:css-post]
SyntaxError: [lightningcss minify] Unexpected end of input
275 |  .project-card {
276 |    display: block;
277 |    group;
    |         ^
278 |  }
279 |  
    at Module.<anonymous> (C:\Users\sriji\OneDrive\Desktop\planet\node_modules\lightningcss\node\index.js:56:14)
    at minifyCSS (file:///C:/Users/sriji/OneDrive/Desktop/planet/node_modules/vite/dist/node/chunks/node.js:21170:59)
    at async finalizeCss (file:///C:/Users/sriji/OneDrive/Desktop/planet/node_modules/vite/dist/node/chunks/node.js:21016:36)[31m
    at aggregateBindingErrorsIntoJsError (file:///C:/Users/sriji/OneDrive/Desktop/planet/node_modules/rolldown/dist/shared/error-CP8smW_P.mjs:48:18)
    at unwrapBindingResult (file:///C:/Users/sriji/OneDrive/Desktop/planet/node_modules/rolldown/dist/shared/error-CP8smW_P.mjs:18:128)
    at #build (file:///C:/Users/sriji/OneDrive/Desktop/planet/node_modules/rolldown/dist/shared/rolldown-build-4YnQkA76.mjs:3311:34)
    at async buildEnvironment (file:///C:/Users/sriji/OneDrive/Desktop/planet/node_modules/vite/dist/node/chunks/node.js:32794:64)
    at async Object.build (file:///C:/Users/sriji/OneDrive/Desktop/planet/node_modules/vite/dist/node/chunks/node.js:33216:19)
    at async Object.buildApp (file:///C:/Users/sriji/OneDrive/Desktop/planet/node_modules/vite/dist/node/chunks/node.js:33213:153)
    at async CAC.<anonymous> (file:///C:/Users/sriji/OneDrive/Desktop/planet/node_modules/vite/dist/node/cli.js:778:3) {
  errors: [Getter/Setter]
}[39m
